--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -57,7 +57,9 @@ jobs:
           echo "${GITHUB_REF}"
           if [ -z ${{ github.event.inputs.mbed_os_release_version }} ];then
             echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
+            echo "##[set-output name=cache_source;]$(echo ${GITHUB_REF#refs/tags/})"
           else
+            echo "##[set-output name=cache_source;]$(echo ${GITHUB_REF#refs/heads/})"
             if [ -z $(git tag --merged ${GITHUB_REF} ${{ github.event.inputs.mbed_os_release_version }}) ]; then
               echo "Check the tag name ${{ github.event.inputs.mbed_os_release_version }} is not found on branch ${GITHUB_REF}"
               exit 1
@@ -85,6 +87,7 @@ jobs:
           echo ${{ steps.extract_tag.outputs.tag }}-${date} > build_info/prod_tag_dated
           echo ${{ steps.extract_tag.outputs.tag }}-latest > build_info/prod_tag_latest
           echo ${{ steps.extract_tag.outputs.tag }} > build_info/mbed_os_version
+          echo ${{ steps.extract_tag.outputs.cache_source }} > build_info/cache_source_version
           # echo dev-${{ steps.mbed_os_version.outputs.tag }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
           # echo ${{ steps.mbed_os_version.outputs.tag }}-${date} > build_info/prod_tag_dated
           # echo ${{ steps.mbed_os_version.outputs.tag }}-latest > build_info/prod_tag_latest
@@ -128,7 +131,8 @@ jobs:
           echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
           value=`cat mbed_os_version`
           echo "::set-output name=MBED_OS_VERSION::$value"
-
+          value=`cat cache_source_version`
+          echo "::set-output name=CACHE_SOURCE::$value"
       - 
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -162,7 +166,7 @@ jobs:
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
           tags: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
-          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.MBED_OS_VERSION }}-latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.CACHE_SOURCE }}-latest
           cache-to: type=inline
 
       -
