--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -58,9 +58,7 @@ jobs:
           echo "${{github.event_name}}"
           if [ -z ${{ github.event.inputs.mbed_os_release_version }} ];then
             echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
-            echo "##[set-output name=cache_source;]$(echo ${GITHUB_REF#refs/tags/})"
           else
-            echo "##[set-output name=cache_source;]$(echo ${GITHUB_REF#refs/heads/})"
             if [ -z $(git tag --merged ${GITHUB_REF} ${{ github.event.inputs.mbed_os_release_version }}) ]; then
               echo "Check the tag name ${{ github.event.inputs.mbed_os_release_version }} is not found on branch ${GITHUB_REF}"
               exit 1
@@ -88,7 +86,6 @@ jobs:
           echo ${{ steps.extract_tag.outputs.tag }}-${date} > build_info/prod_tag_dated
           echo ${{ steps.extract_tag.outputs.tag }}-latest > build_info/prod_tag_latest
           echo ${{ steps.extract_tag.outputs.tag }} > build_info/mbed_os_version
-          echo ${{ steps.extract_tag.outputs.cache_source }} > build_info/cache_source_version
           # echo dev-${{ steps.mbed_os_version.outputs.tag }}-${date}-${{ steps.generate-uuid.outputs.uuid }} > build_info/dev_tag
           # echo ${{ steps.mbed_os_version.outputs.tag }}-${date} > build_info/prod_tag_dated
           # echo ${{ steps.mbed_os_version.outputs.tag }}-latest > build_info/prod_tag_latest
@@ -132,8 +129,12 @@ jobs:
           echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
           value=`cat mbed_os_version`
           echo "::set-output name=MBED_OS_VERSION::$value"
-          value=`cat cache_source_version`
-          echo "::set-output name=CACHE_SOURCE::$value"
+          if [ "workflow_dispatch" == "${{github.event_name}}" ];then
+            echo "##[set-output name=CACHE_SOURCE;]$(echo ${GITHUB_REF#refs/heads/})"
+          else
+            echo "##[set-output name=CACHE_SOURCE;]$(echo ${value})"
+          fi
+
       - 
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
