--- a/.github/workflows/docker_management.on_release.yml
+++ b/.github/workflows/docker_management.on_release.yml
@@ -129,10 +129,16 @@ jobs:
           echo "::set-output name=DOCKER_PROD_TAG_LATEST::$value"
           value=`cat mbed_os_version`
           echo "::set-output name=MBED_OS_VERSION::$value"
+          # if workflow is executed manually; then take cache from the tagged version
+          # if workflow is executed because of a new tag; cache is taken from head of the branch
           if [ "workflow_dispatch" == "${{github.event_name}}" ];then
+            value=${{ github.event.inputs.mbed_os_release_version }}
             echo "##[set-output name=CACHE_SOURCE;]$(echo ${value})"
+            echo $value
           else
-            echo "##[set-output name=CACHE_SOURCE;]$(echo ${GITHUB_REF#refs/heads/})"
+            value=`git branch --contains ${GITHUB_REF} |cut -d' ' -f2`
+            echo "##[set-output name=CACHE_SOURCE;]$(echo ${value})"
+            echo $value
           fi
 
       - 
