--- a/.github/workflows/docker_management.test-PR.yml
+++ b/.github/workflows/docker_management.test-PR.yml
@@ -42,7 +42,8 @@ jobs:
           file: ./docker_images/mbed-os-env/Dockerfile
           load: true
           tags: mbed-os-env:a_pr_test
-          cache-from: type=registry,ref=mbedos/mbed-os-env:master-latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:master-latest
+
 
       - 
         name: test the container
