--- a/.github/workflows/docker_management.deploy.yml
+++ b/.github/workflows/docker_management.deploy.yml
@@ -1,7 +1,10 @@
 name: Publish new dev version of docker image
 
-
 on:
+
+  schedule:
+    - cron:  '15 4 * * *'
+    
   push:
     branches: 
       - master
@@ -10,6 +13,7 @@ on:
     paths:
       # what about dependencies?
       # what about forks?
+      - requirements.txt
       - docker_images/mbed-os-env/**
       - .github/workflows/docker_management.deploy.yml
 
